fixed performance issues by minifying the section area - no 3d-div overlapping sorded the superstars

--- a/trunk/css/map8.css
+++ b/trunk/css/map8.css
@@ -78,11 +78,11 @@ body.grey .background {
 #main {
 position: absolute;
 width: 800px;
-height: 500px;
+height: 100px;
 left: 50%;
 top: 50%;
 margin-left: -400px;
-margin-top: -260px;
+margin-top: 180px;
 text-align: center;
 -webkit-perspective: 600px;
 -webkit-perspective-origin: 50% 25%;
@@ -92,7 +92,7 @@ text-align: center;
 
 #main>section>h3 {
 	position: absolute;
-	bottom: 100px;
+	top: 40px;
 	width: 100%;
 	height: 30px;
 	margin: 0 auto;
@@ -101,7 +101,7 @@ text-align: center;
 
 #main>section>a {
 	position: absolute;
-	bottom: 60px;
+	top: 60px;
 
 	width: 100%;
 	height: 30px;
@@ -208,7 +208,6 @@ text-shadow: 0px 0px 2px white, 0px 0px 4px #BBB;
 	top: 0px;
 	left: 0px;
 	z-index: 1000;
-	border: 1px solid #FF3333;
 	border-radius: 0px 0px 10px 1px;
 	-moz-border-radius: 0px 0px 10px 1px;
 	-webkit-border-bottom-right-radius: 10px;
